# stock-filter-code

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: scheduled-screen.yml
stock_filter_tool/: __init__.py  charts.py  cli.py  data.py  emailer.py  models.py  ranking.py  report.py  signals.py  utils.py
stock_filter_tool/resources/: a_share_universe.csv
tests/: test_charts.py  test_data.py  test_emailer.py  test_ranking.py  test_report.py  test_signals.py
